--- a/IT103A_HTML_CSS_SS/Session04/firsttest.html
+++ b/IT103A_HTML_CSS_SS/Session04/firsttest.html
@@ -40,8 +40,8 @@
     <ol>
         <li><ins>Chấp nhận thất bại</ins>: Đừng sợ hãi khi bạn thất bại. Hãy nhìn nhận đó là một phần tự nhiên của quá trình học hỏi và phát triển</li>
         <li><ins>Phân tích nguyên nhân</ins>: Sau khi thất bại, hãy dành thời gian để phân tích lý do vì sao bạn không thành công và học từ đó.</li>
-        <li><ins>Điều chỉnh kế hoạch</ins>: Thất bại cung cấp thông tin quý giá để bạn cải thiện</li>
-        <li><ins>Tiếp tục Kiên trì</ins>:</li>
+        <li><ins>Điều chỉnh kế hoạch</ins>: Thất bại cung cấp thông tin quý giá để bạn cải thiện.</li>
+        <li><ins>Tiếp tục Kiên trì</ins>: Đừng bao giờ bỏ cuộc. Thất bại không phải là dấu chấm hết mà là cơ hội để bạn thử lại với sự kiên trì và nỗ lực hơn.</li>
     </ol>
     <hr/>
     <p>Bài viết này giúp bạn hiểu <mark>tại sao thất bại không phải là xấu</mark>, mà là một phần thiết yếu để hướng tới thành công(<a href="" target="_blank">Tài liệu tham khảo</a>).</p>
