--- a/IT103A_HTML_CSS_SS/Session04/miniproject.html
+++ b/IT103A_HTML_CSS_SS/Session04/miniproject.html
@@ -36,7 +36,9 @@
                 <td rowspan="2">
                     <p><strong>Mô tả:</strong>Khóa học này cung cấp cho bạn các kỹ năng cơ bản và nâng cao về lập trình
                         web, từ việc xây dựng trang web tĩnh đến các ứng dụng động sử dụng JavaScript, HTML và CSS. Bạn
-                        sẽ được học cách phát triển website từ đầu, bao gồm các kiến thức về <abbr title="Cascading Style Sheets">CSS</abbr>, <abbr title="Cascading Style Sheets">HTML</abbr> và JavaScript.</p>
+                        sẽ được học cách phát triển website từ đầu, bao gồm các kiến thức về <abbr
+                            title="Cascading Style Sheets">CSS</abbr>, <abbr title="Cascading Style Sheets">HTML</abbr>
+                        và JavaScript.</p>
                     <ul>
                         <li><strong>HTML</strong>cơ bản</li>
                         <li><strong>CSS</strong>để tạo giao diện đẹp mắt</li>
@@ -167,5 +169,9 @@
             </td>
         </table>
     </form>
+    <hr />
+    <p><strong>Liên hệ: </strong>Email: info@sinhvienviet.vn |Hotline: 1900 5678 Địa chỉ: 456 Đường XYZ, Quận 3, TP.HCM
+    </p>
 </body>
+
 </html>
